# kyuhachi

./: .firebaserc  .gitignore  .watchmanconfig  AGENTS.md  CLAUDE.md  app.json  firebase.json  onsens.json  package-lock.json  package.json  pyproject.toml
.claude/commands/: check-offline.md  check-styles.md  check-types.md  new-screen.md  pr-checklist.md  update-skills-docs.md
.github/workflows/: ci.yml  deploy-firestore-rules.yml  deploy.yml  preview-build.yml
_archive/: README.md  onsens.csv  onsens.json  pyproject.toml
_archive/src/: __main__.py
app/: .gitignore  Gemfile  app.config.js  app.json  babel.config.js  eas.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
app/app/: _layout.tsx  index.tsx  map.tsx  passport.tsx  sign-in.tsx  stats.tsx
app/fastlane/: Appfile  Fastfile
app/locales/: en.json  ja.json
app/plugins/: withAllowNonModularIncludes.js
app/scripts/: pod-install.sh
data/cache/: japan_holidays.json
docs/: hosting.md  i18n-audit.md  implementation-plan.md  ios-deploy.md  onsen-source-field-audit.md  skills.md  styling-guide.md
firebase/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  storage.rules  tsconfig.json
functions/: package-lock.json  package.json  tsconfig.json
scripts/: build-legal-html.mjs  gpx_map.py  render-brand-assets.py  render-onsen-icon.py  reseed-catalog.py  seed-challenge-type.ts  seed-firestore.ts  update-gservice-secret.sh  version.mjs
shared/: package.json  tsconfig.json
src/: __main__.py  config.py  paths.py
(+244 files in other folders)
