[tool.poetry]
name = "onsendo-kyushu"
version = "0.1.0"
description = "九州八十八湯めぐり"
authors = ["Petr Cala"]
readme = "README.md"
packages = [{ include = "src", from = "." }]


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
requests = "^2.32"
beautifulsoup4 = "^4.13"
loguru = "^0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pylint = "^3.0"


[tool.poetry.scripts]
kyushu = "src.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
